--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@rails/activestorage": "^6.0.0-alpha",
     "@rails/ujs": "^6.0.0-alpha",
     "@rails/webpacker": "^4.0.7",
+    "@tailwindcss/custom-forms": "^0.2.1",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
+    "tailwindcss": "^1.1.3",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
